tests/compile_fail/documentation_error.stderr
error: Expected a string literal.
 --> tests/compile_fail/documentation_error.rs:8:13
  |
8 |     #[doc = false]
  |             ^^^^^

error: Wrong documentation syntax. The right syntax is `#[doc = <literal string>]`.
 --> tests/compile_fail/documentation_error.rs:9:7
  |
9 |     #[doc]
  |       ^^^
